@@ -2,6 +2,7 @@
 Version: 0.1.22
 Date: ????
   Changes:
+    - Support miners with different number of modules
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.21
 Date: 2023-12-10
